# random

./: Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs  msqw.rs
static/: index.html  index.js
