[package]
name = "random"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
tokio-util = "^0.6.8" 
pretty_env_logger = "0.4"
